animation fix on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,7 @@
+  body.preload *{
+    animation-duration: 0s !important;
+  }
+  
   .header-container {
     position: relative;
     width: 1440px;
